Update xcode scheme to match new command name

--- a/.swiftpm/xcode/xcshareddata/xcschemes/appstoreconnect-cli.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/appstoreconnect-cli.xcscheme
@@ -82,12 +82,21 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
+            BlueprintIdentifier = "asc"
+            BuildableName = "asc"
+            BlueprintName = "asc"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
             BlueprintIdentifier = "appstoreconnect-cli"
             BuildableName = "appstoreconnect-cli"
             BlueprintName = "appstoreconnect-cli"
             ReferencedContainer = "container:">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
