Make the Model a target as opposed to a path package

--- a/.swiftpm/xcode/xcshareddata/xcschemes/appstoreconnect-cli.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/appstoreconnect-cli.xcscheme
@@ -48,6 +48,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Model"
+               BuildableName = "Model"
+               BlueprintName = "Model"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
