--- a/.github/workflows/swiftlint.yml
+++ b/.github/workflows/swiftlint.yml
@@ -8,7 +8,7 @@ on:
       - '**/*.swift'
 
 jobs:
-  SwiftLint:
+  swiftlint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
